- Added the POSIX exec() family functions, based upon code contributed
  by Henning Nielsen Lund. Thank you very much!

- atoll() no longer sets 'errno' directly but now calls __set_errno()
  instead.

- Added pathconf(), fpathconf(), sysinfo(), ftime(), ulimit(), getrlimit()
  and setrlimit() as contributed by Peter Bengtsson. Thank you very much!

- Added the missing S_ISSOCKET() macro to <sys/stat.h>. Note that this
  is not actually a POSIX feature.

- Added fmin(), fminf(), fmax() and fmaxf() to the build makefiles.
  Somehow I must have forgotten about them :-(

- select() and waitselect() can now be called without any file descriptor
  sets to work with, as some software does which uses select() in place
  of sleep().

- The <sys/ioctl.h> header file now includes both <sys/select.h> and
  <sys/filio.h> for better compatibility with the TCP/IP stack header
  files.

- Added the global variable __expand_wildcard_args which can be used
  to disable wildcard pattern expansion of command line parameters when
  linked against "libunix.a". Note that this has no effect on the "regular"
  libc.a behaviour.


c.lib 1.200 (17.4.2006)

- The default break signal mask (SIGBREAKF_CTRL_C) is no longer
  hard-coded. You can override it at link time with a different
  variable value for __break_signal_mask. This may have to be
  augmented by an API for changing the value.

- Added a waitselect() function which works very much like the
  bsdsocket.library/WaitSelect() function.

- Added <sys/time.h> include to <sys/socket.h> due to latest "TimeVal" change
  in the OS4 SDK. Otherwise "struct timeval" will not be defined at the time
  the <net/if.h> of the netincludes will be included by <proto/bsdsocket.h>.

- The strftime() hook function had the locale and character parameters
  switched, which made 'setlocale(LC_ALL,""); strftime(..);' unusable.
  Fixed.

- fchown() and chown() now accept owner and group ID values of -1, which